<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Shaman</string>

  <!-- Label for this authenticator -->
  <string name="account_label">Weave</string>

  <string name="about">About</string>
  <string name="account_action">Account</string>
  <string name="help">Help</string>
  <string name="reset_action">Reset</string>
  <string name="resync_action">Sync</string>
  <string name="settings_action">Settings</string>

  <string name="ng_no_items">No items found to display</string>

  <string name="preferences">Settings</string>

  <string name="pref_sync_on_open_title">Sync On Open</string>
  <string name="pref_sync_on_open_summary">Synchronize on application open</string>

  <string name="pref_server_url_title">Server</string>
  <string name="pref_server_url_summary">The URL for the server</string>

  <string name="pref_username_title">Username</string>
  <string name="pref_username_summary">The Username</string>

  <string name="pref_password_title">Password</string>
  <string name="pref_password_summary">The Password</string>

  <string name="pref_sync_key_title">Sync Key</string>
  <string name="pref_sync_key_summary">The Sync Key</string>

  <string name="pref_accept_invalid_certs_title">Accept All Certs</string>
  <string name="pref_accept_invalid_certs_summary">Accept all SSL certificates</string>

  <string name="bookmark_provider_label">Bookmarks</string>
  <string name="password_provider_label">Passwords</string>

  <!-- Title string for Login activity-->
  <string name="login_activity_title">Sign-in</string>
  <!-- Message shown in progress dialog while app connects to the server -->
  <string name="ui_activity_authenticating">Authenticating\u2026</string>

  <!-- Message shown in dialog if the server is invalid -->
  <string name="login_activity_loginfail_text_server">The server URL isn\'t valid. Please try again or leave blank for the default.</string>
  <!-- Message shown in dialog if the authAccount or password is invalid. -->
  <string name="login_activity_loginfail_text_both">The username or password isn\'t valid. A Weave SyncAdapter account is required. Please try again.</string>
  <!-- Message shown in dialog if the password is invalid -->
  <string name="login_activity_loginfail_text_pwonly">You entered the wrong password or your account has changed. Please re-enter your password.</string>
  <!-- Message shown in dialog to prompt the user for their password -->
  <string name="login_activity_loginfail_text_pwmissing">Type the password for this account.</string>
  <!-- Message shown in dialog to prompt the user for their password -->
  <string name="login_activity_loginfail_text_secretmissing">Type the encryption secret for this account.</string>

  <!-- Message shown in dialog to handle unknown errors -->
  <string name="login_activity_loginfail_text_unknown">There was an unknown problem validating your account info.</string>


  <!-- Message shown if the provided account doesn't support the current activity. -->
  <string name="login_activity_newaccount_text">Sign in to your Weave account.</string>

  <string name="appopts_activity_title">Shaman Preferences</string>

  <string-array name="account_setup_login_server_optarray">
    <item>Use a custom server</item>
    <item>Firefox Sync Server</item>
  </string-array>
  <string-array name="account_setup_login_server_optarray_values">
    <item>CUSTOM</item>
    <item>https://auth.services.mozilla.com/</item>
  </string-array>
  <string name="login_activity_server_spinner_prompt">Select the server</string>
  <string name="next_action">Next</string>
  <string name="login_activity_server_hint">Server URL</string>
  <string name="login_activity_username_hint">User Name</string>
  <string name="login_activity_password_hint">Password</string>
  <string name="login_activity_secret_hint">Sync Key</string>

  <!-- Help -->
  <string name="help_url">http://shaman.emergent.org/</string>

  <!-- About -->
  <string name="about_title">About Shaman</string>
  <string name="about_url">http://shaman.emergent.org/</string>
  <string name="about_close">Close</string>
  <string name="version">Version</string>

  <!-- Reset Dialog -->
  <string name="reset_confirm_title">Reset</string>
  <string name="reset_confirm_message">Really reset all data?</string>
  <string name="cancel">Cancel</string>
  <string name="reset">Reset</string>
  <string name="test">Test</string>

  <string name="bookmarks">Bookmarks</string>
  <string name="passwords">Passwords</string>

  <string name="search_box_hint">type to filter</string>
  <string name="loading">Loading</string>

  <string name="bookmark_icon_content_description">Bookmark Favicon</string>

  <string name="sync_notify_title">Shaman Synchronizing</string>
  <string name="sync_notify_text">Synchronization operation in progress.</string>
  <string name="sync_notify_ticker">Synchronizing</string>

</resources>
