<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_menu_home"
      />
  <item android:id="@+id/resync"
        android:title="@string/resync_action"
        android:icon="@drawable/ic_menu_refresh"
        android:showAsAction="ifRoom"
      />
  <item android:id="@+id/about"
        android:title="@string/about"
        android:icon="@drawable/ic_menu_info_details"
      />
  <item android:id="@+id/account"
        android:title="@string/account_action"
        android:icon="@drawable/ic_menu_login"
      />
  <item android:id="@+id/help"
        android:title="@string/help"
        android:icon="@drawable/ic_menu_help"
      />
  <item android:id="@+id/reset"
        android:title="@string/reset_action"
        android:icon="@drawable/ic_menu_manage"
      />
  <item android:id="@+id/settings"
        android:title="@string/settings_action"
        android:icon="@drawable/ic_menu_preferences"
      />
</menu>
