<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
  <ScrollView
      android:layout_width="fill_parent"
      android:layout_height="0dip"
      android:layout_weight="1"
      android:layout_marginBottom="10dip"
      android:layout_marginLeft="5dip"
      >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
      <TextView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/app_name"
          android:gravity="center"
          android:textStyle="bold"
          android:textColor="#ffffffff"
          android:layout_marginTop="10dip"
          android:layout_marginBottom="10dip"
          />
      <TextView
          android:id="@+id/about_version_text_view"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:textStyle="bold"
          android:textColor="#ffffffff"
          android:layout_marginTop="10dip"
          android:layout_marginBottom="10dip"
          android:visibility="invisible"
          />
      <TextView
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/about_url"
          android:autoLink="web"
          android:gravity="center"
          android:textStyle="bold"
          android:textColor="#ffffffff"
          android:layout_marginTop="10dip"
          android:layout_marginBottom="10dip"
          />
      <TextView
        android:id="@+id/about_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:bufferType="spannable"
        android:textColor="#ffffffff"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        />
    </LinearLayout>
  </ScrollView>
  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      >
    <Button
        android:id="@+id/close_button"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:text="@string/about_close"/>
  </LinearLayout>
</LinearLayout>
